complete users and groups

--- a/app/views/registration_mailer/notify_admins.html.erb
+++ b/app/views/registration_mailer/notify_admins.html.erb
@@ -8,6 +8,9 @@
     <p>
        New user has signed up into DRS with email: <%= @user.email %>
     </p>
+    <p>
+       Please visit DRS to review this user: <%= admin_users_url %>
+    </p>
   </body>
 </html> 
  
