--- a/app/views/registration_mailer/welcome.html.erb
+++ b/app/views/registration_mailer/welcome.html.erb
@@ -9,7 +9,7 @@
       You have successfully signed up to DRS with email: <%= @user.email %>.<br/>
     </p>
     <p>
-      Please wait for our administrators to activate your account. After that, you can login with this password: <%= @password %>. Feel free to change it in your profile settings.
+      Please wait for our administrators to activate your account. After that, you can login with this password: <b><%= @password %></b>. Feel free to change it in your profile settings.
     </p>
     <p>Thanks for joining and have a great day!</p>
   </body>
