--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -47,6 +47,10 @@
     <%= f.label :year %><br />
     <%= f.number_field :year %>
   </div>
+  <div class="field">
+    <%= f.label :group_id %><br />
+    <%= f.number_field :group_id %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
