--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -45,6 +45,11 @@
   <%= @report.year %>
 </p>
 
+<p>
+  <b>Group:</b>
+  <%= @report.group_id %>
+</p>
+
 
 <%= link_to 'Edit', edit_report_path(@report) %> |
 <%= link_to 'Back', reports_path %>
